# retail-game

./: .env.example  .gitignore  CLAUDE.md  README.md  ROLE.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py  ws_manager.py
app/core/: config.py
app/domain/: auth.py  balance.py  demo.py  engine.py  models.py  project_status.py  ratings.py  readiness_tracker.py  session_registry.py  simulation.py
app/services/: __init__.py  database_store.py  leaderboard_store.py  (+2 more)
docs/: API_REFERENCE.md  AUDIT.md  DEVELOPER_ACTION_PLAN.md  DEVELOPMENT_STATUS.md  HANDOFF.md  ITERATION_PROTOCOL.md  ROADMAP.md  TECHNICAL_SPEC.md
migrations/: env.py
tests/: test_advisor.py  test_assets.py  test_auth.py  test_balance_harness.py  test_banking.py  test_bankruptcy_freeze.py  test_bot_expansion.py  test_chain_to_shelf.py  test_database_migrations.py  test_database_store.py  test_day_closure.py  test_delivery_orders.py  test_demand_elasticity.py  test_demo.py  test_engine.py  test_facilities.py  test_finances.py  test_game_completion.py  test_inventory_batches.py  test_jwt_auth.py  test_leaderboard.py  test_leaderboard_db_persistence.py  test_leaderboard_persistence.py  test_logistics_risk.py  test_market.py  test_market_npc.py  test_npc_strategies.py  test_price_history.py  test_price_reactivity.py  test_producer_recipe.py  test_project_status.py  test_ratings.py  test_raw_materials.py  test_readiness.py  test_regional_competition.py  test_session_leaderboard.py  test_sessions.py  test_simulation.py  test_smart_bots.py  test_state_store.py  (+3 more)
(+6 files in other folders)
