[project]
name = "profit-chain"
version = "0.1.0"
description = "Browser economic strategy prototype about retail, production and distribution supply chains."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic-settings==2.7.1",
    "SQLAlchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.9.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
